<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#99000000">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/desc"
            android:background="@drawable/logo" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/form"
            android:hint="@string/username"
            android:autofillHints="username"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF8F8"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/form"
            android:hint="@string/password"
            android:autofillHints="password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF8F8"/>
        <Button
            android:id="@+id/login"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:textColor="#FFF8F8"
            android:background="@drawable/button_color"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

        <TextView
            android:id="@+id/linkRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:textColor="#FFF8F8"
            android:clickable="true"
            android:focusable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forgot"
                android:textColor="#FFF8F8"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>