<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#99000000">
        <TextView
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="10dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/form"
            android:hint="@string/email"
            android:autofillHints="emailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF8F8"
            android:inputType="textEmailAddress" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/form"
            android:hint="@string/username"
            android:autofillHints="username"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF8F8"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/form"
            android:hint="@string/phone"
            android:autofillHints="phone"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF8F8"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:background="@drawable/form"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:autofillHints="password"
            android:inputType="textVisiblePassword"
            android:textSize="18sp"
            android:layout_marginTop="10dp"
            android:textColorHint="#FFF8F8"/>
        <Button
            android:id="@+id/register"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:text="@string/register"
            android:layout_marginTop="20dp"
            android:textColor="#FFF8F8"
            android:background="@drawable/button_color"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</LinearLayout>