<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailProduct">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#646464"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back"
            android:onClick="back"
            android:contentDescription="Image"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:text="Informasi Produk"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/black"
            android:layout_marginTop="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/harga_produk"
                android:paddingTop="10dp"
                android:textStyle="bold"
                android:paddingEnd="50dp"
                android:textColor="@color/black"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/buy"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/beli"
                android:textStyle="bold"
                android:textSize="20sp"
                android:onClick="buy"
                android:textAllCaps="false"/>
        </LinearLayout>
        <TextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gitar1"
            android:textColor="@color/black"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:background="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deskripsi : Guitar Taylor AC142 berukuran(Panjang 20, Lebar 16) dengan tipe tubuh Taylor Grand Auditorium."
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>
